comp/parse/y.output
   0  $accept : program $end

   1  tnosemichecks :

   2  tnoendchecks :

   3  $$1 :

   4  program : tprogram identifier $$1 tsemi extdefs

   5  extdefs : extdef
   6          | extdefs extdef

   7  extdef : TDIRECTION directiondefs
   8         | TREGION regiondefs
   9         | TEXTERN TTYPE exttypedefs
  10         | TTYPE typedefs
  11         | TEXTERN TVAR extvardefs
  12         | TEXTERN TFREE TVAR extfreevardefs
  13         | TVAR vardefs
  14         | TFREE TVAR freevardefs
  15         | TCONFIG TCONST configconstdefs
  16         | TCONFIG TVAR configdefs
  17         | TCONST constdefs
  18         | TEXTERN TCONST extconstdefs
  19         | TGRID griddefs
  20         | TDISTRIBUTION distributiondefs
  21         | fndef

  22  constdefs : constdefs constdef
  23            | constdef

  24  extconstdefs : extconstdefs extconstdef
  25               | extconstdef

  26  directiondefs : directiondefs directiondef
  27                | directiondef

  28  exttypedefs : exttypedefs exttypedef
  29              | exttypedef

  30  typedefs : typedefs typedef
  31           | typedef

  32  extvardefs : extvardefs extvardef
  33             | extvardef

  34  extfreevardefs : extfreevardefs extfreevardef
  35                 | extfreevardef

  36  vardefs : vardefs vardef
  37          | vardef

  38  freevardefs : freevardefs freevardef
  39              | freevardef

  40  staticvardefs : staticvardefs staticvardef
  41                | staticvardef

  42  staticfreevardefs : staticfreevardefs staticfreevardef
  43                    | staticfreevardef

  44  configdefs : configdefs configdef
  45             | configdef

  46  configconstdefs : configconstdefs configconstdef
  47                  | configconstdef

  48  regiondefs : regiondefs regiondef
  49             | regiondef

  50  distributiondefs : distributiondefs distributiondef
  51                   | distributiondef

  52  griddefs : griddefs griddef
  53           | griddef

  54  extvardef : idlist tcolon ext_type_denoter tsemi

  55  extfreevardef : idlist tcolon ext_type_denoter tsemi

  56  vardef : idlist tcolon type_denoter tsemi
  57         | idlist tcolon type_denoter tequal init tsemi

  58  freevardef : idlist tcolon type_denoter tsemi
  59             | idlist tcolon type_denoter tequal init tsemi

  60  staticvardef : idlist tcolon type_denoter tsemi
  61               | idlist tcolon type_denoter tequal init tsemi

  62  staticfreevardef : idlist tcolon type_denoter tsemi
  63                   | idlist tcolon type_denoter tequal init tsemi

  64  configdef : TIDENT tcolon type_denoter tequal init tsemi
  65            | TIDENT tcolon type_denoter tsemi

  66  configconstdef : TIDENT tcolon type_denoter tequal init tsemi
  67                 | TIDENT tcolon type_denoter tsemi

  68  extconstdef : TIDENT tcolon type_denoter tequal init tsemi
  69              | TIDENT tcolon type_denoter tsemi

  70  constdef : TIDENT tcolon type_denoter tequal init tsemi
  71           | TIDENT tcolon type_denoter tsemi

  72  distributiondef : TIDENT TCOLON TIDENT tequal init tsemi
  73                  | TIDENT tequal init tsemi

  74  griddef : TIDENT tequal init tsemi

  75  direction_ref : sbe
  76                | base_lvalue

  77  direction_init_ref : sbe
  78                     | base_lvalue

  79  direction_init : direction_init_ref

  80  directiondef : TIDENT tequal direction_init tsemi

  81  regiondef : TIDENT tequal sbe_expr tsemi
  82            | TIDENT TCOLON TIDENT tequal sbe_expr tsemi

  83  exttypedef : TIDENT tequal ext_type_denoter tsemi

  84  typedef : TIDENT tequal type_denoter tsemi

  85  sbe_item :
  86           | TSTAR
  87           | TRGRID
  88           | TQUEST
  89           | expr TDOTDOT expr
  90           | sbe_expr

  91  sbe_item_list : sbe_item
  92                | sbe_item_list TCOMMA sbe_item

  93  sbe : TLSBR sbe_item_list TRSBR

  94  region_spec : sbe

  95  mrlist_elem :
  96              | expr
  97              | TRGRID expr

  98  mrlist : mrlist_elem
  99         | mrlist TCOMMA mrlist_elem

 100  mega_region : TLSBR mrlist TRSBR

 101  dimlist : expr TDOTDOT expr
 102          | dimlist TCOMMA expr TDOTDOT expr
 103          | expr
 104          | dimlist TCOMMA expr
 105          | expr TCOLON expr

 106  trecord : TRECORD

 107  proto_type_denoter : type_denoter
 108                     | TGRID
 109                     | TPROCEDURE

 110  ext_type_denoter : type_denoter
 111                   | TOPAQUE

 112  direction_type_component : TPLUS
 113                           | TMINUS
 114                           | integer
 115                           |

 116  direction_type : direction_type_component TCOMMA direction_type
 117                 | direction_type_component

 118  grid_type_component : TDOTDOT
 119                      | TDOT

 120  grid_type : grid_type_component TCOMMA grid_type
 121            | grid_type_component

 122  distribution_type_component : TBLOCK
 123                              | TCYCLIC
 124                              | TMULTIBLOCK
 125                              | TNONDIST
 126                              | TIRREGULAR

 127  distribution_type : distribution_type_component TCOMMA distribution_type
 128                    | distribution_type_component

 129  region_type_component : TDOTDOT
 130                        | TDOT
 131                        | TSTAR
 132                        | TGRID
 133                        |

 134  region_type : region_type_component TCOMMA region_type
 135              | region_type_component

 136  nonparallel_type_denoter : TINT
 137                           | TBOOLEAN
 138                           | TCHAR
 139                           | TSHORT
 140                           | TLONG
 141                           | TFLOAT
 142                           | TDOUBLE
 143                           | TQUAD
 144                           | TFILE
 145                           | TSTRING
 146                           | TUNSINT
 147                           | TUNSSHORT
 148                           | TUNSLONG
 149                           | TUNSBYTE
 150                           | TSBYTE
 151                           | TCOMPLEX
 152                           | TDCOMPLEX
 153                           | TQCOMPLEX
 154                           | TGENERIC
 155                           | TTYPEIDENT
 156                           | TLP enumlist TRP
 157                           | TARRAY TLSBR dimlist TRSBR TOF type_denoter

 158  $$2 :

 159  nonparallel_type_denoter : trecord $$2 record_list tend

 160  $$3 :

 161  nonparallel_type_denoter : TUNION $$3 record_list tend
 162                           | TIDENT
 163                           | error

 164  type_denoter : nonparallel_type_denoter
 165               | TDIRECTION TLESS direction_type TGREATER
 166               | TREGION TLESS region_type TGREATER
 167               | sbe TREGION TLESS region_type TGREATER
 168               | TDISTRIBUTION TLESS distribution_type TGREATER
 169               | sbe TDISTRIBUTION TLESS distribution_type TGREATER
 170               | TGRID TLESS grid_type TGREATER
 171               | TREGION
 172               | TDISTRIBUTION
 173               | TGENERICENSEMBLE
 174               | sbe nonparallel_type_denoter

 175  $$4 :

 176  enumlist : $$4 enumerator
 177           | enumlist TCOMMA enumerator
 178           | enumlist TCOMMA

 179  enumerator : TIDENT
 180             | TIDENT TEQUAL expr

 181  record_list : record_component
 182              | record_list record_component

 183  record_component : idlist tcolon type_denoter tsemi

 184  $$5 :

 185  $$6 :

 186  fndef : tprocedure TIDENT $$5 TLP formals TRP returntype tsemi locals $$6 compound_stmt tsemi

 187  $$7 :

 188  fndef : tprototype TIDENT $$7 TLP protoformals TRP protoreturntype tsemi

 189  $$8 :

 190  $$9 :

 191  fndef : TFREE tprocedure TIDENT $$8 TLP formals TRP returntype tsemi locals $$9 compound_stmt tsemi

 192  $$10 :

 193  fndef : TFREE tprototype TIDENT $$10 TLP protoformals TRP protoreturntype tsemi

 194  $$11 :

 195  fndef : TEXTERN tprototype TIDENT $$11 TLP protoformals TRP protoreturntype tsemi

 196  $$12 :

 197  fndef : TEXTERN TFREE tprototype TIDENT $$12 TLP protoformals TRP protoreturntype tsemi

 198  protoreturntype :
 199                  | tcolon proto_type_denoter

 200  returntype :
 201             | tcolon type_denoter

 202  is_free :
 203          | TFREE

 204  param_type :
 205             | TCONST
 206             | TVAR
 207             | TIN
 208             | TOUT
 209             | TINOUT

 210  formals :
 211          | nonnullformals

 212  nonnullformals : formal
 213                 | nonnullformals tsemi formal

 214  formal : is_free param_type idlist tcolon type_denoter

 215  protoformals :
 216               | nonnullprotoformals

 217  nonnullprotoformals : protoformal
 218                      | nonnullprotoformals tsemi protoformal

 219  protoformal : is_free param_type idlist tcolon proto_type_denoter

 220  locals :
 221         | nonnulllocals

 222  nonnulllocals : local
 223                | nonnulllocals local

 224  local : TVAR vardefs
 225        | TFREE TVAR freevardefs
 226        | TSTATIC TVAR staticvardefs
 227        | TSTATIC TFREE TVAR staticfreevardefs

 228  reductionop : TPLUSREDUCE
 229              | TTIMESREDUCE
 230              | TMINREDUCE
 231              | TMAXREDUCE
 232              | TANDREDUCE
 233              | TORREDUCE
 234              | TBANDREDUCE
 235              | TBORREDUCE
 236              | TBXORREDUCE

 237  scanop : TPLUSSCAN
 238         | TTIMESSCAN
 239         | TMINSCAN
 240         | TMAXSCAN
 241         | TANDSCAN
 242         | TORSCAN
 243         | TBANDSCAN
 244         | TBORSCAN
 245         | TBXORSCAN

 246  assignop : TASSIGN
 247           | TEQUAL

 248  assignop_gets : TASSPLUS
 249                | TASSMINUS
 250                | TASSMULT
 251                | TASSDIVIDE
 252                | TASSMODULUS
 253                | TASSAND
 254                | TASSOR

 255  base_lvalue : TIDENT
 256              | base_lvalue TLSBR nonnull_exprlist TRSBR
 257              | base_lvalue TLSBR TRSBR
 258              | base_lvalue TLSBR error TRSBR
 259              | base_lvalue TDOT identifier
 260              | base_lvalue TRGRID mega_region

 261  lvalue : base_lvalue
 262         | lvalue TPERMUTE mega_region
 263         | lvalue TAT direction_ref
 264         | lvalue TWRAPAT direction_ref
 265         | lvalue TPRIME TAT direction_ref

 266  funccall : TIDENT TLP exprlist TRP

 267  constval : TINTEGER
 268           | TFLOAT
 269           | TCHARACTER
 270           | string

 271  ioexpr : expr
 272         | expr TCOLON expr

 273  nonnull_ioexprlist : nonnull_ioexprlist TCOMMA ioexpr
 274                     | ioexpr

 275  ioexprlist :
 276             | nonnull_ioexprlist

 277  nonnull_exprlist : sbe_expr
 278                   | nonnull_exprlist TCOMMA sbe_expr

 279  exprlist :
 280           | nonnull_exprlist

 281  expr : constval
 282       | funccall
 283       | base_lvalue
 284       | expr TPERMUTE mega_region
 285       | expr TAT direction_ref
 286       | expr TWRAPAT direction_ref
 287       | expr TPRIME TAT direction_ref
 288       | TLP expr TRP
 289       | TMINUS expr
 290       | TPLUS expr
 291       | TNOT expr
 292       | reductionop expr
 293       | reductionop sbe expr
 294       | scanop expr
 295       | scanop TLSBR integerlist TRSBR expr
 296       | TUSRREDUCE expr
 297       | TUSRREDUCE sbe expr
 298       | TUSRREDUCE TLP nonnull_exprlist TRP
 299       | TUSRREDUCE sbe TLP nonnull_exprlist TRP
 300       | TUSRSCAN expr
 301       | TUSRSCAN TLSBR integerlist TRSBR expr
 302       | TUSRSCAN TLP nonnull_exprlist TRP
 303       | TUSRSCAN TLSBR integerlist TRSBR TLP nonnull_exprlist TRP
 304       | TFLOOD sbe expr
 305       | expr TFLOOD
 306       | expr TPLUS expr
 307       | expr TMINUS expr
 308       | expr TSTAR expr
 309       | expr TDIVIDE expr
 310       | expr TMODULUS expr
 311       | expr TEXP expr
 312       | expr TLESS expr
 313       | expr TLESSEQUAL expr
 314       | expr TGREATER expr
 315       | expr TGREATEREQUAL expr
 316       | expr TEQUAL expr
 317       | expr TNOTEQUAL expr
 318       | expr TAND expr
 319       | expr TOR expr

 320  maskop : TWITH
 321         | TWITHOUT
 322         | TSWITH
 323         | TSWITHOUT

 324  sbe_expr : expr
 325           | sbe
 326           | TQUOTE
 327           | direction_ref TOF sbe_expr
 328           | direction_ref TIN sbe_expr
 329           | sbe_expr TREGIONAT direction_ref
 330           | sbe_expr TBY direction_ref
 331           | sbe_expr maskop sbe_expr
 332           | sbe_expr maskop TQUEST

 333  assignment : lvalue assignop sbe_expr
 334             | lvalue assignop_gets sbe_expr
 335             | lvalue TDESTROY sbe_expr
 336             | lvalue TPRESERVE sbe_expr

 337  tprogram : TPROGRAM

 338  tif : TIF

 339  twhile : TWHILE

 340  trepeat : TREPEAT

 341  tfor : TFOR

 342  telsif : TELSIF

 343  tbegin : TBEGIN

 344  tmscan : TMSCAN

 345  tcontinue : TCONTINUE

 346  texit : TEXIT

 347  thalt : THALT

 348  treturn : TRETURN

 349  twrap : TWRAP

 350  treflect : TREFLECT

 351  tread : TREAD

 352  twrite : TWRITE

 353  twriteln : TWRITELN

 354  tbread : TBREAD

 355  tbwrite : TBWRITE

 356  tequal : TEQUAL
 357         | TASSIGN

 358  tcolon : TCOLON
 359         | TEQUAL
 360         | TASSIGN

 361  tprocedure : TPROCEDURE

 362  tprototype : TPROTOTYPE

 363  tsemi : TSEMI
 364        | tnosemichecks

 365  tend : TEND
 366       | tnoendchecks

 367  stmtls :
 368         | nonempty_stmtls

 369  nonempty_stmtls : stmt tsemi
 370                  | nonempty_stmtls stmt tsemi
 371                  | TSEMI
 372                  | error TSEMI

 373  stmt : compound_stmt
 374       | expr_stmt
 375       | if_stmt
 376       | loop_stmt
 377       | control_stmt
 378       | io_stmt
 379       | mscan_stmt
 380       | wrapreflect_stmt

 381  compound_stmt : tbegin stmtls tend
 382                | region_spec stmt

 383  expr_stmt : assignment
 384            | funccall

 385  if_stmt : tif expr TTHEN stmtls tend
 386          | tif expr TTHEN stmtls TELSE stmtls tend
 387          | tif expr TTHEN stmtls elsif_stmt
 388          | tif expr error

 389  elsif_stmt : telsif expr TTHEN stmtls tend
 390             | telsif expr TTHEN stmtls TELSE stmtls tend
 391             | telsif expr TTHEN stmtls elsif_stmt
 392             | telsif expr error

 393  loop_stmt : twhile expr TDO stmtls tend
 394            | twhile expr error
 395            | trepeat stmtls TUNTIL expr
 396            | tfor expr TASSIGN expr TTO expr TDO stmtls tend
 397            | tfor expr TASSIGN expr TTO expr TBY expr TDO stmtls tend
 398            | tfor expr TASSIGN expr TDOWNTO expr TDO stmtls tend
 399            | tfor expr TASSIGN expr TDOWNTO expr TBY expr TDO stmtls tend

 400  control_stmt : tcontinue
 401               | texit
 402               | treturn
 403               | treturn expr

 404  io_stmt : tread TLP nonnull_ioexprlist TRP
 405          | twrite TLP nonnull_ioexprlist TRP
 406          | twriteln TLP ioexprlist TRP
 407          | tbread TLP nonnull_ioexprlist TRP
 408          | tbwrite TLP nonnull_ioexprlist TRP
 409          | thalt
 410          | thalt TLP nonnull_ioexprlist TRP

 411  mscan_stmt : tmscan stmtls tend

 412  wrapreflect_stmt : twrap nonnull_exprlist
 413                   | treflect nonnull_exprlist

 414  init : sbe_expr
 415       | TLCBR initlist TRCBR
 416       | TLCBR initlist TCOMMA TRCBR

 417  initlist : init
 418           | initlist TCOMMA init

 419  string : TSTR
 420         | string TSTR

 421  identifier : TIDENT
 422             | TTYPEIDENT

 423  ident : identifier

 424  idlist : ident
 425         | idlist TCOMMA ident

 426  integerlist : integer
 427              | integerlist TCOMMA integer

 428  integer : TINTEGER
 429          | TPLUS TINTEGER
 430          | TMINUS TINTEGER

state 0
	$accept : . program $end  (0)

	TPROGRAM  shift 1
	.  error

	program  goto 2
	tprogram  goto 3


state 1
	tprogram : TPROGRAM .  (337)

	.  reduce 337


state 2
	$accept : program . $end  (0)

	$end  accept


state 3
	program : tprogram . identifier $$1 tsemi extdefs  (4)

	TIDENT  shift 4
	TTYPEIDENT  shift 5
	.  error

	identifier  goto 6


state 4
	identifier : TIDENT .  (421)

	.  reduce 421


state 5
	identifier : TTYPEIDENT .  (422)

	.  reduce 422


state 6
	program : tprogram identifier . $$1 tsemi extdefs  (4)
	$$1 : .  (3)

	.  reduce 3

	$$1  goto 7


state 7
	program : tprogram identifier $$1 . tsemi extdefs  (4)
	tnosemichecks : .  (1)

	TSEMI  shift 8
	TCONFIG  reduce 1
	TCONST  reduce 1
	TDIRECTION  reduce 1
	TDISTRIBUTION  reduce 1
	TEXTERN  reduce 1
	TGRID  reduce 1
	TPROCEDURE  reduce 1
	TPROTOTYPE  reduce 1
	TREGION  reduce 1
	TTYPE  reduce 1
	TFREE  reduce 1
	TVAR  reduce 1

	tsemi  goto 9
	tnosemichecks  goto 10


state 8
	tsemi : TSEMI .  (363)

	.  reduce 363


state 9
	program : tprogram identifier $$1 tsemi . extdefs  (4)

	TCONFIG  shift 11
	TCONST  shift 12
	TDIRECTION  shift 13
	TDISTRIBUTION  shift 14
	TEXTERN  shift 15
	TGRID  shift 16
	TPROCEDURE  shift 17
	TPROTOTYPE  shift 18
	TREGION  shift 19
	TTYPE  shift 20
	TFREE  shift 21
	TVAR  shift 22
	.  error

	extdefs  goto 23
	extdef  goto 24
	fndef  goto 25
	tprocedure  goto 26
	tprototype  goto 27


state 10
	tsemi : tnosemichecks .  (364)

	.  reduce 364


state 11
	extdef : TCONFIG . TCONST configconstdefs  (15)
	extdef : TCONFIG . TVAR configdefs  (16)

	TCONST  shift 28
	TVAR  shift 29
	.  error


state 12
	extdef : TCONST . constdefs  (17)

	TIDENT  shift 30
	.  error

	constdefs  goto 31
	constdef  goto 32


state 13
	extdef : TDIRECTION . directiondefs  (7)

	TIDENT  shift 33
	.  error

	directiondefs  goto 34
	directiondef  goto 35


state 14
	extdef : TDISTRIBUTION . distributiondefs  (20)

	TIDENT  shift 36
	.  error

	distributiondefs  goto 37
	distributiondef  goto 38


state 15
	extdef : TEXTERN . TTYPE exttypedefs  (9)
	extdef : TEXTERN . TVAR extvardefs  (11)
	extdef : TEXTERN . TFREE TVAR extfreevardefs  (12)
	extdef : TEXTERN . TCONST extconstdefs  (18)
	fndef : TEXTERN . tprototype TIDENT $$11 TLP protoformals TRP protoreturntype tsemi  (195)
	fndef : TEXTERN . TFREE tprototype TIDENT $$12 TLP protoformals TRP protoreturntype tsemi  (197)

	TCONST  shift 39
	TPROTOTYPE  shift 18
	TTYPE  shift 40
	TFREE  shift 41
	TVAR  shift 42
	.  error

	tprototype  goto 43


state 16
	extdef : TGRID . griddefs  (19)

	TIDENT  shift 44
	.  error

	griddefs  goto 45
	griddef  goto 46


state 17
	tprocedure : TPROCEDURE .  (361)

	.  reduce 361


state 18
	tprototype : TPROTOTYPE .  (362)

	.  reduce 362


state 19
	extdef : TREGION . regiondefs  (8)

	TIDENT  shift 47
	.  error

	regiondefs  goto 48
	regiondef  goto 49


state 20
	extdef : TTYPE . typedefs  (10)

	TIDENT  shift 50
	.  error

	typedefs  goto 51
	typedef  goto 52


state 21
	extdef : TFREE . TVAR freevardefs  (14)
	fndef : TFREE . tprocedure TIDENT $$8 TLP formals TRP returntype tsemi locals $$9 compound_stmt tsemi  (191)
	fndef : TFREE . tprototype TIDENT $$10 TLP protoformals TRP protoreturntype tsemi  (193)

	TPROCEDURE  shift 17
	TPROTOTYPE  shift 18
	TVAR  shift 53
	.  error

	tprocedure  goto 54
	tprototype  goto 55


state 22
	extdef : TVAR . vardefs  (13)

	TIDENT  shift 4
	TTYPEIDENT  shift 5
	.  error

	idlist  goto 56
	ident  goto 57
	identifier  goto 58
	vardefs  goto 59
	vardef  goto 60


state 23
	program : tprogram identifier $$1 tsemi extdefs .  (4)
	extdefs : extdefs . extdef  (6)

	TCONFIG  shift 11
	TCONST  shift 12
	TDIRECTION  shift 13
	TDISTRIBUTION  shift 14
	TEXTERN  shift 15
	TGRID  shift 16
	TPROCEDURE  shift 17
	TPROTOTYPE  shift 18
	TREGION  shift 19
	TTYPE  shift 20
	TFREE  shift 21
	TVAR  shift 22
	$end  reduce 4

	extdef  goto 61
	fndef  goto 25
	tprocedure  goto 26
	tprototype  goto 27


state 24
	extdefs : extdef .  (5)

	.  reduce 5


state 25
	extdef : fndef .  (21)

	.  reduce 21


state 26
	fndef : tprocedure . TIDENT $$5 TLP formals TRP returntype tsemi locals $$6 compound_stmt tsemi  (186)

	TIDENT  shift 62
	.  error


state 27
	fndef : tprototype . TIDENT $$7 TLP protoformals TRP protoreturntype tsemi  (188)

	TIDENT  shift 63
	.  error


state 28
	extdef : TCONFIG TCONST . configconstdefs  (15)

	TIDENT  shift 64
	.  error

	configconstdefs  goto 65
	configconstdef  goto 66


state 29
	extdef : TCONFIG TVAR . configdefs  (16)

	TIDENT  shift 67
	.  error

	configdefs  goto 68
	configdef  goto 69


state 30
	constdef : TIDENT . tcolon type_denoter tequal init tsemi  (70)
	constdef : TIDENT . tcolon type_denoter tsemi  (71)

	TCOLON  shift 70
	TASSIGN  shift 71
	TEQUAL  shift 72
	.  error

	tcolon  goto 73


state 31
	extdef : TCONST constdefs .  (17)
	constdefs : constdefs . constdef  (22)

	TIDENT  shift 30
	$end  reduce 17
	TCONFIG  reduce 17
	TCONST  reduce 17
	TDIRECTION  reduce 17
	TDISTRIBUTION  reduce 17
	TEXTERN  reduce 17
	TGRID  reduce 17
	TPROCEDURE  reduce 17
	TPROTOTYPE  reduce 17
	TREGION  reduce 17
	TTYPE  reduce 17
	TFREE  reduce 17
	TVAR  reduce 17

	constdef  goto 74


state 32
	constdefs : constdef .  (23)

	.  reduce 23


state 33
	directiondef : TIDENT . tequal direction_init tsemi  (80)

	TASSIGN  shift 75
	TEQUAL  shift 76
	.  error

	tequal  goto 77


state 34
	extdef : TDIRECTION directiondefs .  (7)
	directiondefs : directiondefs . directiondef  (26)

	TIDENT  shift 33
	$end  reduce 7
	TCONFIG  reduce 7
	TCONST  reduce 7
	TDIRECTION  reduce 7
	TDISTRIBUTION  reduce 7
	TEXTERN  reduce 7
	TGRID  reduce 7
	TPROCEDURE  reduce 7
	TPROTOTYPE  reduce 7
	TREGION  reduce 7
	TTYPE  reduce 7
	TFREE  reduce 7
	TVAR  reduce 7

	directiondef  goto 78


state 35
	directiondefs : directiondef .  (27)

	.  reduce 27


state 36
	distributiondef : TIDENT . TCOLON TIDENT tequal init tsemi  (72)
	distributiondef : TIDENT . tequal init tsemi  (73)

	TCOLON  shift 79
	TASSIGN  shift 75
	TEQUAL  shift 76
	.  error

	tequal  goto 80


state 37
	extdef : TDISTRIBUTION distributiondefs .  (20)
	distributiondefs : distributiondefs . distributiondef  (50)

	TIDENT  shift 36
	$end  reduce 20
	TCONFIG  reduce 20
	TCONST  reduce 20
	TDIRECTION  reduce 20
	TDISTRIBUTION  reduce 20
	TEXTERN  reduce 20
	TGRID  reduce 20
	TPROCEDURE  reduce 20
	TPROTOTYPE  reduce 20
	TREGION  reduce 20
	TTYPE  reduce 20
	TFREE  reduce 20
	TVAR  reduce 20

	distributiondef  goto 81


state 38
	distributiondefs : distributiondef .  (51)

	.  reduce 51


state 39
	extdef : TEXTERN TCONST . extconstdefs  (18)

	TIDENT  shift 82
	.  error

	extconstdefs  goto 83
	extconstdef  goto 84


state 40
	extdef : TEXTERN TTYPE . exttypedefs  (9)

	TIDENT  shift 85
	.  error

	exttypedefs  goto 86
	exttypedef  goto 87


state 41
	extdef : TEXTERN TFREE . TVAR extfreevardefs  (12)
	fndef : TEXTERN TFREE . tprototype TIDENT $$12 TLP protoformals TRP protoreturntype tsemi  (197)

	TPROTOTYPE  shift 18
	TVAR  shift 88
	.  error

	tprototype  goto 89


state 42
	extdef : TEXTERN TVAR . extvardefs  (11)

	TIDENT  shift 4
	TTYPEIDENT  shift 5
	.  error

	idlist  goto 90
	ident  goto 57
	identifier  goto 58
	extvardefs  goto 91
	extvardef  goto 92


state 43
	fndef : TEXTERN tprototype . TIDENT $$11 TLP protoformals TRP protoreturntype tsemi  (195)

	TIDENT  shift 93
	.  error


state 44
	griddef : TIDENT . tequal init tsemi  (74)

	TASSIGN  shift 75
	TEQUAL  shift 76
	.  error

	tequal  goto 94


state 45
	extdef : TGRID griddefs .  (19)
	griddefs : griddefs . griddef  (52)

	TIDENT  shift 44
	$end  reduce 19
	TCONFIG  reduce 19
	TCONST  reduce 19
	TDIRECTION  reduce 19
	TDISTRIBUTION  reduce 19
	TEXTERN  reduce 19
	TGRID  reduce 19
	TPROCEDURE  reduce 19
	TPROTOTYPE  reduce 19
	TREGION  reduce 19
	TTYPE  reduce 19
	TFREE  reduce 19
	TVAR  reduce 19

	griddef  goto 95


state 46
	griddefs : griddef .  (53)

	.  reduce 53


state 47
	regiondef : TIDENT . tequal sbe_expr tsemi  (81)
	regiondef : TIDENT . TCOLON TIDENT tequal sbe_expr tsemi  (82)

	TCOLON  shift 96
	TASSIGN  shift 75
	TEQUAL  shift 76
	.  error

	tequal  goto 97


state 48
	extdef : TREGION regiondefs .  (8)
	regiondefs : regiondefs . regiondef  (48)

	TIDENT  shift 47
	$end  reduce 8
	TCONFIG  reduce 8
	TCONST  reduce 8
	TDIRECTION  reduce 8
	TDISTRIBUTION  reduce 8
	TEXTERN  reduce 8
	TGRID  reduce 8
	TPROCEDURE  reduce 8
	TPROTOTYPE  reduce 8
	TREGION  reduce 8
	TTYPE  reduce 8
	TFREE  reduce 8
	TVAR  reduce 8

	regiondef  goto 98


state 49
	regiondefs : regiondef .  (49)

	.  reduce 49


state 50
	typedef : TIDENT . tequal type_denoter tsemi  (84)

	TASSIGN  shift 75
	TEQUAL  shift 76
	.  error

	tequal  goto 99


state 51
	extdef : TTYPE typedefs .  (10)
	typedefs : typedefs . typedef  (30)

	TIDENT  shift 50
	$end  reduce 10
	TCONFIG  reduce 10
	TCONST  reduce 10
	TDIRECTION  reduce 10
	TDISTRIBUTION  reduce 10
	TEXTERN  reduce 10
	TGRID  reduce 10
	TPROCEDURE  reduce 10
	TPROTOTYPE  reduce 10
	TREGION  reduce 10
	TTYPE  reduce 10
	TFREE  reduce 10
	TVAR  reduce 10

	typedef  goto 100


state 52
	typedefs : typedef .  (31)

	.  reduce 31


state 53
	extdef : TFREE TVAR . freevardefs  (14)

	TIDENT  shift 4
	TTYPEIDENT  shift 5
	.  error

	idlist  goto 101
	ident  goto 57
	identifier  goto 58
	freevardefs  goto 102
	freevardef  goto 103


state 54
	fndef : TFREE tprocedure . TIDENT $$8 TLP formals TRP returntype tsemi locals $$9 compound_stmt tsemi  (191)

	TIDENT  shift 104
	.  error


state 55
	fndef : TFREE tprototype . TIDENT $$10 TLP protoformals TRP protoreturntype tsemi  (193)

	TIDENT  shift 105
	.  error


state 56
	vardef : idlist . tcolon type_denoter tsemi  (56)
	vardef : idlist . tcolon type_denoter tequal init tsemi  (57)
	idlist : idlist . TCOMMA ident  (425)

	TCOLON  shift 70
	TCOMMA  shift 106
	TASSIGN  shift 71
	TEQUAL  shift 72
	.  error

	tcolon  goto 107


state 57
	idlist : ident .  (424)

	.  reduce 424


state 58
	ident : identifier .  (423)

	.  reduce 423


state 59
	extdef : TVAR vardefs .  (13)
	vardefs : vardefs . vardef  (36)

	TIDENT  shift 4
	TTYPEIDENT  shift 5
	$end  reduce 13
	TCONFIG  reduce 13
	TCONST  reduce 13
	TDIRECTION  reduce 13
	TDISTRIBUTION  reduce 13
	TEXTERN  reduce 13
	TGRID  reduce 13
	TPROCEDURE  reduce 13
	TPROTOTYPE  reduce 13
	TREGION  reduce 13
	TTYPE  reduce 13
	TFREE  reduce 13
	TVAR  reduce 13

	idlist  goto 56
	ident  goto 57
	identifier  goto 58
	vardef  goto 108


state 60
	vardefs : vardef .  (37)

	.  reduce 37


state 61
	extdefs : extdefs extdef .  (6)

	.  reduce 6


state 62
	fndef : tprocedure TIDENT . $$5 TLP formals TRP returntype tsemi locals $$6 compound_stmt tsemi  (186)
	$$5 : .  (184)

	.  reduce 184

	$$5  goto 109


state 63
	fndef : tprototype TIDENT . $$7 TLP protoformals TRP protoreturntype tsemi  (188)
	$$7 : .  (187)

	.  reduce 187

	$$7  goto 110


state 64
	configconstdef : TIDENT . tcolon type_denoter tequal init tsemi  (66)
	configconstdef : TIDENT . tcolon type_denoter tsemi  (67)

	TCOLON  shift 70
	TASSIGN  shift 71
	TEQUAL  shift 72
	.  error

	tcolon  goto 111

